[package]
name = "hl7-query"
version = "0.1.0"
edition = "2021"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
description = "A command-line tool for parsing and manipulating HL7 messages"

[[bin]]
name = "hq"
path = "src/main.rs"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.14", features = ["derive", "cargo", "wrap_help"] }
color-eyre = "0.6.2"
hl7-parser = "0.1"
nom = "7.1.3"
rand = "0.8.5"
termcolor = "1.4.0"
syntect = { version = "5.1", default-features = false, features = ["default-fancy"] }
serde = "1.0.195"
serde_json = "1.0.111"
strip-ansi-escapes = "0.2.0"

