[package]
name = "hq"
version = "0.1.0"
edition = "2021"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
description = "A command-line tool for parsing and manipulating HL7 messages"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.14", features = ["derive", "cargo", "wrap_help"] }
color-eyre = "0.6.2"
hl7-parser = { path = "../../hl7-parser", version = "0.0.1" }
nom = "7.1.3"
rand = "0.8.5"
termcolor = "1.4.0"
